fixed github link

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,7 @@ import "../styles/global.css";
         <div class="flex gap-6 text-sm text-gray-300">
           <a href="#about" class="hover:text-white transition">About</a>
           <a href="#projects" class="hover:text-white transition">Projects</a>
-          <a href="https://github.com/" target="_blank" class="hover:text-white transition">
+          <a href="https://github.com/SyedQem" target="_blank" class="hover:text-white transition">
             GitHub
           </a>
         </div>
