--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const featuredProjects = allprojects.filter((p) => p.data.featured).slice(0, 3);
 
 
 
-<Layout>
+<Layout title="KirbyDoesTech - Thoughtful Systems">
   <main class="relative z-10">
     <!-- HERO SECTION -->
     <section
